# CodeGRAGPlus

./: .gitignore  ReadMe.md
algo/: Search_with_CodeT5.py  Search_with_UnixCoder.py
cpp_results/: samples_with_graph.jsonl
finetune/: finetune_gemma.py  finetune_gemma_graph.py  finetune_graphllm.py  finetune_vicuna.py  gemma4code.py
inference/: run_gemma_multilingual.py  run_gemma_trained.py  run_vicuna_trained.py
mvg/: CMakeCache.txt  CMakeLists.txt  ac_parser.cpp  build.ninja  call_graphGen.py  cfgGeneration  cmake_install.cmake  compile_commands.json  getCFG.py  graph_gen_main.py  run_ast_cfg_graph.sh
output_code/: samples_gemma_c++_trained.jsonl  samples_gemma_c++_trained_results.jsonl  samples_gemma_c++_trained_results_lite.jsonl
python_results/: samples_gemma_python_multilinual.jsonl  samples_with_graph.jsonl
test/: build_retrieval_index.py  create_json_dataset.py  finetune_codallama.py  finetune_gemma.py  finetune_gemma_graph.py  finetune_vicuna.py  modeling_gemma.py  run_codellama_code.py  run_codellama_graph.py  run_codellama_multilingual.py  run_coder_with_kg.py  run_codereval.py  run_gemma_multilingual.py  run_gpt4_with_code.py  run_gpt4_with_graph.py  run_iter_code.py  run_iter_graph.py  run_raw_gpt4.py  run_raw_multilingual.py  run_with_code.py  run_with_graph.py  visualize_ret_res.py
utils/: backup.py  build_graph.py  build_python_graph.py  code_enc.py  config.py  extract_cfg.py  extract_one_round.py  gpt4_utils.py  graph_describe.py  merge.py  post_process.py  precess_codet5.py  statistics.py  transform_json_to_cpp.py  unix_coder.py  utils.py
